--- a/app/src/main/res/drawable/button2.xml
+++ b/app/src/main/res/drawable/button2.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="10dp">
-    <solid android:color="#ffffff"/>
+    <solid android:color="#C3E3CA"/>
 
 
         />
@@ -11,7 +11,7 @@
         android:topLeftRadius="7dp"
         android:topRightRadius="7dp"/>
     <stroke android:width="0.2dp"
-        android:color="#898989"
+        android:color="#C3E3CA"
 
         />
 
