--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,10 +12,10 @@
         >
 
    <LinearLayout
-       android:layout_marginTop="60dp"
+       android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
-       android:layout_height="50dp"
+       android:layout_height="30dp"
        android:gravity="center"
        android:id="@+id/login_title">
 
@@ -25,14 +25,13 @@
            android:layout_gravity="bottom|center_vertical"
 
            android:textStyle="bold"
-           android:textSize="35dp"
+           android:textSize="5dp"
            android:textColor="#6fafbf"/>
 
    </LinearLayout>
 
         <LinearLayout
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="30dp"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:id="@+id/login_img"
@@ -51,21 +50,33 @@
 
         <LinearLayout
             android:layout_centerInParent="true"
-            android:layout_marginTop="70dp"
+            android:layout_marginTop="60dp"
             android:id="@+id/login_id_layout"
-            android:layout_width="200dp"
+            android:layout_width="280dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/login_img"
-            android:orientation="horizontal"
+            android:layout_above="@+id/login_pw_layout"
+            android:orientation="vertical"
             android:background="@drawable/button2"
             android:padding="5dp"
             >
 
-            <TextView
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="       "
+                android:background="@drawable/ic_checkbox_pen_outline"
                 android:layout_gravity="center_vertical"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="  Login"
+                    android:textSize="17dp"
+                    android:textColor="#ffffff"/>
+
+            </LinearLayout>
+
 
             <EditText
                 android:hint="아이디"
@@ -73,8 +84,8 @@
                 android:layout_height="wrap_content"
                 android:text="+821041199582"
                 android:id="@+id/login_edit_id_text"
-                android:background="@null"
-                android:textSize="14dp"
+                android:textSize="15dp"
+                android:textColor="#000000"
                 />
 
 
@@ -82,31 +93,44 @@
 
         <LinearLayout
             android:id="@+id/login_pw_layout"
-            android:layout_width="200dp"
+            android:layout_width="280dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/login_id_layout"
-            android:orientation="horizontal"
+            android:layout_above="@+id/login_loginBtn"
+            android:orientation="vertical"
             android:background="@drawable/button2"
             android:layout_centerInParent="true"
-            android:layout_marginTop="10dp"
             android:padding="5dp"
             >
 
-          <TextView
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="       "
-                android:layout_gravity="center_vertical"/>
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="20dp"
+                    android:background="@drawable/ic_lock"
+                    android:layout_gravity="center_vertical"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="  Password"
+                    android:textSize="17dp"
+                    android:textColor="#ffffff"
+                    android:layout_gravity="center_vertical"/>
+            </LinearLayout>
+
 
             <EditText
-                android:background="@null"
                 android:hint="패스워드"
                 android:text="1234"
-                android:layout_width="160dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/login_edit_pw_text"
-                android:textSize="14dp"/>
-
+                android:textColor="#000000"
+                android:textSize="15dp"
+                android:password="true"/>
 
         </LinearLayout>
 
@@ -119,9 +143,9 @@
             android:text="L o g i n "
             android:textColor="@color/colorPrimary"
             android:textStyle="italic"
-            android:layout_below="@+id/login_pw_layout"
+            android:layout_above="@+id/login_register"
             android:layout_centerInParent="true"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="25dp"
             android:background="@drawable/button"/>
 
         <Button
@@ -131,9 +155,10 @@
             android:text="Resigter"
             android:textColor="@color/colorPrimary"
             android:textStyle="italic"
-            android:layout_below="@+id/login_loginBtn"
+            android:layout_alignParentBottom="true"
             android:layout_centerInParent="true"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="60dp"
             android:background="@drawable/button"/>
     </RelativeLayout>
 
